Practice for Huzu

--- a/website/templates/aboutpage.html
+++ b/website/templates/aboutpage.html
@@ -159,7 +159,7 @@
           <a href="{% url 'home' %}"><image src="{% static 'images/logo.png' %}" class="logo"></a>
           <a href="{% url 'about' %}">About Us</a>
           <a href="{% url 'service' %}">Services</a>
-          <a href="{% url 'contact' %}">Contact Us</a>
+          <a href="{% url 'contact' %}">Contact Us!</a>
         </nav>
       </header>
 
